--- a/HEWGame/HEWGame/HEWGame.vcxproj
+++ b/HEWGame/HEWGame/HEWGame.vcxproj
@@ -128,15 +128,20 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Ankou.cpp" />
     <ClCompile Include="BaseScene.cpp" />
     <ClCompile Include="direct3d.cpp" />
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameScene.cpp" />
     <ClCompile Include="Input.cpp" />
+    <ClCompile Include="Kagamidai.cpp" />
+    <ClCompile Include="Kairyu.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="mapfile.cpp" />
+    <ClCompile Include="Mendako.cpp" />
     <ClCompile Include="Object.cpp" />
+    <ClCompile Include="Onikinme.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="ResultScene.cpp" />
     <ClCompile Include="SceneManager.cpp" />
@@ -144,6 +149,7 @@
     <ClCompile Include="StageSelectScene.cpp" />
     <ClCompile Include="TextureManager.cpp" />
     <ClCompile Include="TitleScene.cpp" />
+    <ClCompile Include="Trap.cpp" />
     <ClCompile Include="Wall.cpp" />
     <ClCompile Include="WICTextureLoader.cpp" />
     <ClCompile Include="Light.cpp">
@@ -151,20 +157,26 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Ankou.h" />
     <ClInclude Include="BaseScene.h" />
     <ClInclude Include="direct3d.h" />
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameScene.h" />
     <ClInclude Include="Input.h" />
+    <ClInclude Include="Kagamidai.h" />
+    <ClInclude Include="Kairyu.h" />
     <ClInclude Include="mapfile.h" />
+    <ClInclude Include="Mendako.h" />
     <ClInclude Include="Object.h" />
+    <ClInclude Include="Onikinme.h" />
     <ClInclude Include="ResultScene.h" />
     <ClInclude Include="SceneManager.h" />
     <ClInclude Include="sound.h" />
     <ClInclude Include="StageSelectScene.h" />
     <ClInclude Include="TextureManager.h" />
     <ClInclude Include="TitleScene.h" />
+    <ClInclude Include="Trap.h" />
     <ClInclude Include="Wall.h" />
     <ClInclude Include="WICTextureLoader.h" />
     <ClInclude Include="Player.h" />
