--- a/HEWGame/HEWGame/HEWGame.vcxproj
+++ b/HEWGame/HEWGame/HEWGame.vcxproj
@@ -131,6 +131,7 @@
     <ClCompile Include="Ankou.cpp" />
     <ClCompile Include="BaseScene.cpp" />
     <ClCompile Include="Bubble.cpp" />
+    <ClCompile Include="camera.cpp" />
     <ClCompile Include="direct3d.cpp" />
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="Game.cpp" />
@@ -161,6 +162,7 @@
     <ClInclude Include="Ankou.h" />
     <ClInclude Include="BaseScene.h" />
     <ClInclude Include="Bubble.h" />
+    <ClInclude Include="camera.h" />
     <ClInclude Include="direct3d.h" />
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="Game.h" />
@@ -172,6 +174,7 @@
     <ClInclude Include="Mendako.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="Onikinme.h" />
+    <ClInclude Include="Random.h" />
     <ClInclude Include="ResultScene.h" />
     <ClInclude Include="SceneManager.h" />
     <ClInclude Include="sound.h" />
