Enemy移動追加(まだ追加中)
左にだけ移動できるようにした

--- a/HEWGame/HEWGame/HEWGame.vcxproj
+++ b/HEWGame/HEWGame/HEWGame.vcxproj
@@ -142,12 +142,15 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="mapfile.cpp" />
     <ClCompile Include="Mendako.cpp" />
+    <ClCompile Include="o2.cpp" />
     <ClCompile Include="Object.cpp" />
     <ClCompile Include="Onikinme.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="ResultScene.cpp" />
     <ClCompile Include="SceneManager.cpp" />
     <ClCompile Include="sound.cpp" />
+    <ClCompile Include="SoundCursol.cpp" />
+    <ClCompile Include="Cursol.cpp" />
     <ClCompile Include="StageSelectScene.cpp" />
     <ClCompile Include="TextureManager.cpp" />
     <ClCompile Include="TitleScene.cpp" />
@@ -172,12 +175,15 @@
     <ClInclude Include="Kairyu.h" />
     <ClInclude Include="mapfile.h" />
     <ClInclude Include="Mendako.h" />
+    <ClInclude Include="o2.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="Onikinme.h" />
     <ClInclude Include="Random.h" />
     <ClInclude Include="ResultScene.h" />
     <ClInclude Include="SceneManager.h" />
     <ClInclude Include="sound.h" />
+    <ClInclude Include="SoundCursol.h" />
+    <ClInclude Include="Cursol.h" />
     <ClInclude Include="StageSelectScene.h" />
     <ClInclude Include="TextureManager.h" />
     <ClInclude Include="TitleScene.h" />
@@ -200,14 +206,7 @@
     </FxCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Data\Map1.csv" />
-    <None Include="Data\Map2.csv" />
-    <None Include="Data\Map3.csv" />
-    <None Include="Data\Map4.csv" />
-    <None Include="Data\Map5.csv" />
-    <None Include="Data\Map6.csv" />
-    <None Include="Data\Map7.csv" />
-    <None Include="Data\Map8.csv" />
+    <None Include="Data\MAP_STAGE2.csv" />
     <None Include="Data\TestData.csv" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
