--- a/HEWGame/HEWGame/HEWGame.vcxproj
+++ b/HEWGame/HEWGame/HEWGame.vcxproj
@@ -134,7 +134,7 @@
     <ClCompile Include="Ankou.cpp" />
     <ClCompile Include="BaseScene.cpp" />
     <ClCompile Include="Bubble.cpp" />
-    <ClCompile Include="camera.cpp" />
+    <ClCompile Include="Camera.cpp" />
     <ClCompile Include="direct3d.cpp" />
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="Game.cpp" />
@@ -168,7 +168,7 @@
     <ClInclude Include="Ankou.h" />
     <ClInclude Include="BaseScene.h" />
     <ClInclude Include="Bubble.h" />
-    <ClInclude Include="camera.h" />
+    <ClInclude Include="Camera.h" />
     <ClInclude Include="direct3d.h" />
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="Game.h" />
